--- a/MyDreamHomeApp/Views/Home/Index.cshtml
+++ b/MyDreamHomeApp/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (User==null)
+    {
+        <h1 class="display-4">Welcome, please register in MyDream App</h1>
+    }
+    else
+    {
+        <h1 class=" display-6">Hello @User.Identity?.Name</h1>
+    }
+
+   
 </div>
