Fixed the issue with the name of the MyHomeController.

--- a/DreamHome/DreamHome/Views/_ViewImports.cshtml
+++ b/DreamHome/DreamHome/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using DreamHome
 @using DreamHome.Models
-@using DreamHome.Models.MyHome
+@using DreamHome.Models.MyHomes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
